# KerrBlackHole

./: CMakeLists.txt  INSTALL_NOTES.txt  LICENSE  PARAMETER_GUIDE.md  PHYSICS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VISUAL_REFERENCE.txt  build.bat  build_simple.bat  main.cpp  setup.bat
shaders/: blackhole.frag  blackhole.vert  blackhole_optimized.frag
